--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:bitsassignment.database.windows.net,1433;Initial Catalog=DoctorDB;Persist Security Info=False;User ID=AyushAssignment;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:bitsassignment.database.windows.net,1433;Initial Catalog=DoctorDB;Persist Security Info=False;User ID=AyushAssignment;Password=Assignment123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
